Fix-Alignments

--- a/src/components/Skills/progressBar.css
+++ b/src/components/Skills/progressBar.css
@@ -46,7 +46,7 @@
 {
     .progressContainer
     {
-        height: 160vh;
+        height: 180vh;
         width: 100%;
     }
 }
